force-app/main/default/objects/INVOICE_GSTR__x/INVOICE_GSTR__x.object-meta.xml
<CustomObject>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>INVOICE_GSTR</externalName>
    <label>INVOICE_GSTR</label>
    <pluralLabel>INVOICE_GSTR</pluralLabel>
</CustomObject>