force-app/main/default/objects/INVOICE_GSTR__x/fields/CESS__c.field-meta.xml
<CustomField>
    <fullName>CESS__c</fullName>
    <description>CESS</description>
    <externalDeveloperName>CESS</externalDeveloperName>
    <label>CESS</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>