force-app/main/default/objects/INVOICE_GSTR__x/fields/CESS_AC_CODE__c.field-meta.xml
<CustomField>
    <fullName>CESS_AC_CODE__c</fullName>
    <description>CESS_AC_CODE</description>
    <externalDeveloperName>CESS_AC_CODE</externalDeveloperName>
    <label>CESS_AC_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>