force-app/main/default/objects/INVOICE_GSTR__x/fields/CGST_AC_CODE__c.field-meta.xml
<CustomField>
    <fullName>CGST_AC_CODE__c</fullName>
    <description>CGST_AC_CODE</description>
    <externalDeveloperName>CGST_AC_CODE</externalDeveloperName>
    <label>CGST_AC_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>