force-app/main/default/objects/INVOICE_GSTR__x/fields/COLUMN1__c.field-meta.xml
<CustomField>
    <fullName>COLUMN1__c</fullName>
    <description>COLUMN1</description>
    <externalDeveloperName>COLUMN1</externalDeveloperName>
    <label>COLUMN1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>