force-app/main/default/objects/INVOICE_GSTR__x/fields/EXPORT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>EXPORT_TYPE__c</fullName>
    <description>EXPORT_TYPE</description>
    <externalDeveloperName>EXPORT_TYPE</externalDeveloperName>
    <label>EXPORT_TYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>