force-app/main/default/objects/INVOICE_GSTR__x/fields/GOODS_SERVICES__c.field-meta.xml
<CustomField>
    <fullName>GOODS_SERVICES__c</fullName>
    <description>GOODS_SERVICES</description>
    <externalDeveloperName>GOODS_SERVICES</externalDeveloperName>
    <label>GOODS_SERVICES</label>
    <length>20</length>
    <type>Text</type>
</CustomField>