force-app/main/default/objects/INVOICE_GSTR__x/fields/GST_STATUS__c.field-meta.xml
<CustomField>
    <fullName>GST_STATUS__c</fullName>
    <description>GST_STATUS</description>
    <externalDeveloperName>GST_STATUS</externalDeveloperName>
    <label>GST_STATUS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>