force-app/main/default/objects/INVOICE_GSTR__x/fields/GSTIN_UIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_UIN__c</fullName>
    <description>GSTIN_UIN</description>
    <externalDeveloperName>GSTIN_UIN</externalDeveloperName>
    <label>GSTIN_UIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>