force-app/main/default/objects/INVOICE_GSTR__x/fields/IGST_AC_CODE__c.field-meta.xml
<CustomField>
    <fullName>IGST_AC_CODE__c</fullName>
    <description>IGST_AC_CODE</description>
    <externalDeveloperName>IGST_AC_CODE</externalDeveloperName>
    <label>IGST_AC_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>