force-app/main/default/objects/INVOICE_GSTR__x/fields/INTEGRATED_TAX_AMT__c.field-meta.xml
<CustomField>
    <fullName>INTEGRATED_TAX_AMT__c</fullName>
    <description>INTEGRATED_TAX_AMT</description>
    <externalDeveloperName>INTEGRATED_TAX_AMT</externalDeveloperName>
    <label>INTEGRATED_TAX_AMT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>