force-app/main/default/objects/INVOICE_GSTR__x/fields/INVOICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE__c</fullName>
    <description>INVOICE_TYPE</description>
    <externalDeveloperName>INVOICE_TYPE</externalDeveloperName>
    <label>INVOICE_TYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>