force-app/main/default/objects/INVOICE_GSTR__x/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <description>NAME</description>
    <externalDeveloperName>NAME</externalDeveloperName>
    <label>NAME</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>