force-app/main/default/objects/INVOICE_GSTR__x/fields/ODOC_DATE__c.field-meta.xml
<CustomField>
    <fullName>ODOC_DATE__c</fullName>
    <description>ODOC_DATE</description>
    <externalDeveloperName>ODOC_DATE</externalDeveloperName>
    <label>ODOC_DATE</label>
    <type>DateTime</type>
</CustomField>