force-app/main/default/objects/INVOICE_GSTR__x/fields/ODOC_NO__c.field-meta.xml
<CustomField>
    <fullName>ODOC_NO__c</fullName>
    <description>ODOC_NO</description>
    <externalDeveloperName>ODOC_NO</externalDeveloperName>
    <label>ODOC_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>