force-app/main/default/objects/INVOICE_GSTR__x/fields/OGSTN__c.field-meta.xml
<CustomField>
    <fullName>OGSTN__c</fullName>
    <description>OGSTN</description>
    <externalDeveloperName>OGSTN</externalDeveloperName>
    <label>OGSTN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>