force-app/main/default/objects/INVOICE_GSTR__x/fields/OUR_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>OUR_GSTIN__c</fullName>
    <description>OUR_GSTIN</description>
    <externalDeveloperName>OUR_GSTIN</externalDeveloperName>
    <label>OUR_GSTIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>