force-app/main/default/objects/INVOICE_GSTR__x/fields/OUR_OFFICE_CODE__c.field-meta.xml
<CustomField>
    <fullName>OUR_OFFICE_CODE__c</fullName>
    <description>OUR_OFFICE_CODE</description>
    <externalDeveloperName>OUR_OFFICE_CODE</externalDeveloperName>
    <label>OUR_OFFICE_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>