force-app/main/default/objects/INVOICE_GSTR__x/fields/PERSONAL_LEDGER_CODE__c.field-meta.xml
<CustomField>
    <fullName>PERSONAL_LEDGER_CODE__c</fullName>
    <description>PERSONAL_LEDGER_CODE</description>
    <externalDeveloperName>PERSONAL_LEDGER_CODE</externalDeveloperName>
    <label>PERSONAL_LEDGER_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>