force-app/main/default/objects/INVOICE_GSTR__x/fields/PLACE_OF_SUPPLY__c.field-meta.xml
<CustomField>
    <fullName>PLACE_OF_SUPPLY__c</fullName>
    <description>PLACE_OF_SUPPLY</description>
    <externalDeveloperName>PLACE_OF_SUPPLY</externalDeveloperName>
    <label>PLACE_OF_SUPPLY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>