force-app/main/default/objects/INVOICE_GSTR__x/fields/RATE__c.field-meta.xml
<CustomField>
    <fullName>RATE__c</fullName>
    <description>RATE</description>
    <externalDeveloperName>RATE</externalDeveloperName>
    <label>RATE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>