force-app/main/default/objects/INVOICE_GSTR__x/fields/SAC_HSN__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN__c</fullName>
    <description>SAC_HSN</description>
    <externalDeveloperName>SAC_HSN</externalDeveloperName>
    <label>SAC_HSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>