force-app/main/default/objects/INVOICE_GSTR__x/fields/SGST_AC_CODE__c.field-meta.xml
<CustomField>
    <fullName>SGST_AC_CODE__c</fullName>
    <description>SGST_AC_CODE</description>
    <externalDeveloperName>SGST_AC_CODE</externalDeveloperName>
    <label>SGST_AC_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>