force-app/main/default/objects/INVOICE_GSTR__x/fields/TAX_REV_CHR_APPLICABLE__c.field-meta.xml
<CustomField>
    <fullName>TAX_REV_CHR_APPLICABLE__c</fullName>
    <description>TAX_REV_CHR_APPLICABLE</description>
    <externalDeveloperName>TAX_REV_CHR_APPLICABLE</externalDeveloperName>
    <label>TAX_REV_CHR_APPLICABLE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>