force-app/main/default/objects/INVOICE_GSTR__x/fields/TAXABLE_VALUE__c.field-meta.xml
<CustomField>
    <fullName>TAXABLE_VALUE__c</fullName>
    <description>TAXABLE_VALUE</description>
    <externalDeveloperName>TAXABLE_VALUE</externalDeveloperName>
    <label>TAXABLE_VALUE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>