force-app/main/default/objects/INVOICE_GSTR__x/fields/TOTAL_VALUE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_VALUE__c</fullName>
    <description>TOTAL_VALUE</description>
    <externalDeveloperName>TOTAL_VALUE</externalDeveloperName>
    <label>TOTAL_VALUE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>