force-app/main/default/objects/INVOICE_GSTR__x/fields/TYPE1__c.field-meta.xml
<CustomField>
    <fullName>TYPE1__c</fullName>
    <description>TYPE1</description>
    <externalDeveloperName>TYPE1</externalDeveloperName>
    <label>TYPE1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>