force-app/main/default/objects/INVOICE_GSTR__x/fields/UGST_AC_CODE__c.field-meta.xml
<CustomField>
    <fullName>UGST_AC_CODE__c</fullName>
    <description>UGST_AC_CODE</description>
    <externalDeveloperName>UGST_AC_CODE</externalDeveloperName>
    <label>UGST_AC_CODE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>