force-app/main/default/objects/INVOICE_GSTR__x/fields/UGST_TAX_AMT__c.field-meta.xml
<CustomField>
    <fullName>UGST_TAX_AMT__c</fullName>
    <description>UGST_TAX_AMT</description>
    <externalDeveloperName>UGST_TAX_AMT</externalDeveloperName>
    <label>UGST_TAX_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>